--- a/logistic-html/assets/scss/components/_features.scss
+++ b/logistic-html/assets/scss/components/_features.scss
@@ -16,6 +16,9 @@
         gap: 20px;
         padding: 0 20px;
         margin-bottom: 48px;
+        max-width: 1920px;
+        margin-left: auto;
+        margin-right: auto;
 
         @media #{$lg} {
             grid-template-columns: 1fr 1fr 1fr;
