--- a/logistic-html/assets/css/style.css
+++ b/logistic-html/assets/css/style.css
@@ -2164,7 +2164,7 @@ body::-webkit-scrollbar-track {
 body::-webkit-scrollbar-thumb {
   outline: none;
   border-radius: 30px;
-  background: var(--log-base-color);
+  background: #F62459;
 }
 
 .ul-li ul {
@@ -2235,7 +2235,18 @@ body::-webkit-scrollbar-thumb {
   width: 100%;
   height: 100%;
   overflow: visible;
-  background: #fff url("../img/loader.gif") no-repeat center center;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  background: white;
+}
+#preloader .loader {
+  max-width: 350px;
+}
+@media (max-width: 767px) {
+  #preloader .loader {
+    max-width: 250px;
+  }
 }
 
 .scrollup {
