--- a/logistic-html/assets/scss/_predefine.scss
+++ b/logistic-html/assets/scss/_predefine.scss
@@ -77,7 +77,7 @@ body::-webkit-scrollbar-track {
 body::-webkit-scrollbar-thumb {
 	outline: none;
 	border-radius: 30px;
-	background: var(--log-base-color);
+	background: #F62459;
 }
 .ul-li ul {
 	margin: 0;
@@ -144,7 +144,19 @@ body::-webkit-scrollbar-thumb {
 	width: 100%; 
 	height: 100%;
 	overflow: visible;
-	background: #fff url('../img/loader.gif') no-repeat center center;
+	justify-content: center;
+	align-items: center;
+	display: flex;
+	background: #ffff;
+
+
+	.loader {
+		max-width: 350px;
+
+		@media #{$xs} {
+			max-width: 250px;
+		}
+	}
 }
 .scrollup {
 	width: 55px;
