--- a/logistic-html/assets/scss/main.scss
+++ b/logistic-html/assets/scss/main.scss
@@ -22,6 +22,7 @@
 @import  './components/contact';
 @import  './components/newsletter';
 @import  './components/footer';
+@import  './components/variant';
 /* 
     laa-css-end
 */
