--- a/logistic-html/assets/scss/abstracts/_variables.scss
+++ b/logistic-html/assets/scss/abstracts/_variables.scss
@@ -10,7 +10,7 @@
     
 	--laa-clr-pr-1: #27AAE2;
 	--laa-clr-sd-1: #F62459;
-	--laa-clr-h1: #3D3D3D;
+	--laa-clr-h1: #1A2D4E;
 	--laa-clr-p1: #222222;
 
 
