--- a/logistic-html/assets/scss/components/_footer.scss
+++ b/logistic-html/assets/scss/components/_footer.scss
@@ -88,7 +88,7 @@
                 font-size: 16px;
                 opacity: 64%;
                 font-weight: 400;
-                margin-bottom: 10px;
+                margin-bottom: 16px;
             }
 
             &-menu {
@@ -154,7 +154,7 @@
                             top: 49%;
                             color: var(--fx-clr-pr-1);
                             transform: translateY(-50%);
-                            transition: 400ms var(--cube-1);
+                            transition: 400ms var(--laa-cube-1);
                          }
                       }
                     }
